--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,80 +1,80 @@
 :root {
-  --vh: 1vh;
+	--vh: 1vh;
 }
 
 /* Support the new `dvh` unit so that dynamically shrinking iOS Safari UI works */
 @supports (height: 1dvh) {
-  :root {
-    --vh: 1dvh;
-  }
+	:root {
+		--vh: 1dvh;
+	}
 }
 
 /* However when the app is installed as PWA use the `vh` unit to avoid weird layout issues */
 @media all and (display-mode: standalone) {
-  :root {
-    --vh: 1vh;
-  }
+	:root {
+		--vh: 1vh;
+	}
 }
 
 html {
-  background-color: #fff;
-  height: 100%;
+	background-color: #fff;
+	height: 100%;
 }
 
 body {
-  margin: 0;
-  font-size: 16px;
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-overflow-scrolling: touch;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
+	margin: 0;
+	font-size: 16px;
+	font-family: "Inter", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-overflow-scrolling: touch;
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  background-color: #000;
-  height: 100%;
-  min-height: calc(100 * var(--vh));
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	background-color: #000;
+	height: 100%;
+	min-height: calc(100 * var(--vh));
 }
 
 button,
 input,
 textarea {
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+	font-size: 16px;
+	font-family:
+		-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+		"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 button {
-  border: none;
-  background: none;
-  margin: 0;
-  padding: 0;
+	border: none;
+	background: none;
+	margin: 0;
+	padding: 0;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 li {
-  margin: 0;
+	margin: 0;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
